force-app/main/default/objects/Post_Survey__c/fields/X16_If_bars_available_likelihood_to_buy__c.field-meta.xml
<CustomField>
    <fullName>X16_If_bars_available_likelihood_to_buy__c</fullName>
    <label>16.If bars available, likelihood to buy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Somewhat likely</fullName>
            </value>
            <value>
                <fullName>Neither likely nor unlikely</fullName>
            </value>
            <value>
                <fullName>Somewhat unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>