force-app/main/default/objects/Post_Survey__c/fields/X17_Which_flavor_bar_would_you_buy__c.field-meta.xml
<CustomField>
    <fullName>X17_Which_flavor_bar_would_you_buy__c</fullName>
    <label>17. Which flavor bar would you buy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Peanut Butter</fullName>
            </value>
            <value>
                <fullName>Chocolate Peanut Butter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>