force-app/main/default/objects/Post_Survey__c/fields/X18_How_would_you_buy_bars__c.field-meta.xml
<CustomField>
    <fullName>X18_How_would_you_buy_bars__c</fullName>
    <label>18. How would you prefer to buy bars?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individually</fullName>
            </value>
            <value>
                <fullName>In a box of 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>