force-app/main/default/objects/Post_Survey__c/fields/X19_Frequency_to_purchase_bars__c.field-meta.xml
<CustomField>
    <fullName>X19_Frequency_to_purchase_bars__c</fullName>
    <label>19. Frequency to purchase bars?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>3-6 times per week</fullName>
            </value>
            <value>
                <fullName>1-2 times per week</fullName>
            </value>
            <value>
                <fullName>1-3 times per month</fullName>
            </value>
            <value>
                <fullName>5-11 times per year</fullName>
            </value>
            <value>
                <fullName>A few times per year</fullName>
            </value>
            <value>
                <fullName>Infrequently</fullName>
            </value>
            <value>
                <fullName>j.	Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>