force-app/main/default/objects/Post_Survey__c/fields/X1_How_many_Shakes_did_you_drink__c.field-meta.xml
<CustomField>
    <fullName>X1_How_many_Shakes_did_you_drink__c</fullName>
    <label>1. How many Shakes did you drink?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>