force-app/main/default/objects/Post_Survey__c/fields/X20_When_did_you_eat_bars__c.field-meta.xml
<CustomField>
    <fullName>X20_When_did_you_eat_bars__c</fullName>
    <label>20. When did you eat bars?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early morning / Before breakfast</fullName>
            </value>
            <value>
                <fullName>As my breakfast / Part of breakfast</fullName>
            </value>
            <value>
                <fullName>As a morning snack, before lunch</fullName>
            </value>
            <value>
                <fullName>As my lunch / Part of lunch</fullName>
            </value>
            <value>
                <fullName>As an afternoon snack</fullName>
            </value>
            <value>
                <fullName>As my dinner / Part of dinner</fullName>
            </value>
            <value>
                <fullName>As an evening snack</fullName>
            </value>
            <value>
                <fullName>Late at night</fullName>
            </value>
            <value>
                <fullName>As part of another routine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>