force-app/main/default/objects/Post_Survey__c/fields/X21_What_you_have_had_instead_of_bars__c.field-meta.xml
<CustomField>
    <fullName>X21_What_you_have_had_instead_of_bars__c</fullName>
    <label>21. What you have had instead of bars?</label>
    <type>TextArea</type>
</CustomField>