force-app/main/default/objects/Post_Survey__c/fields/X24_Where_would_you_like_to_find_bars__c.field-meta.xml
<CustomField>
    <fullName>X24_Where_would_you_like_to_find_bars__c</fullName>
    <label>24. Where would you like to find bars?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus dining hall</fullName>
            </value>
            <value>
                <fullName>On-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>On-Campus grocery store</fullName>
            </value>
            <value>
                <fullName>On-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>On-campus restaurant</fullName>
            </value>
            <value>
                <fullName>Other on-campus location</fullName>
            </value>
            <value>
                <fullName>Off-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>Off-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>Off-Campus restaurant</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Club store (i.e. Sam’s, CostCo)</fullName>
            </value>
            <value>
                <fullName>Other off-campus location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>