force-app/main/default/objects/Post_Survey__c/fields/X2_Why_didn_t_you_drink_all_Shakes__c.field-meta.xml
<CustomField>
    <fullName>X2_Why_didn_t_you_drink_all_Shakes__c</fullName>
    <label>2.Why didn’t you drink all Shakes?</label>
    <type>TextArea</type>
</CustomField>