force-app/main/default/objects/Post_Survey__c/fields/X3_What_did_you_think_of_the_Shakes__c.field-meta.xml
<CustomField>
    <fullName>X3_What_did_you_think_of_the_Shakes__c</fullName>
    <label>3.What did you think of the Shakes?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liked extremely</fullName>
            </value>
            <value>
                <fullName>Liked somewhat</fullName>
            </value>
            <value>
                <fullName>Neither liked nor disliked</fullName>
            </value>
            <value>
                <fullName>Disliked somewhat</fullName>
            </value>
            <value>
                <fullName>Disliked extremely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>