force-app/main/default/objects/Post_Survey__c/fields/X4_If_Shakes_available_likelihoo_to_buy__c.field-meta.xml
<CustomField>
    <fullName>X4_If_Shakes_available_likelihoo_to_buy__c</fullName>
    <label>4. If Shakes available, likelihoo to buy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Somewhat likely</fullName>
            </value>
            <value>
                <fullName>Neither likely nor unlikely</fullName>
            </value>
            <value>
                <fullName>Somewhat unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>