force-app/main/default/objects/Post_Survey__c/fields/X5_Which_Shake_Flavor_would_you_buy__c.field-meta.xml
<CustomField>
    <fullName>X5_Which_Shake_Flavor_would_you_buy__c</fullName>
    <label>5. Which Shake Flavor, would you buy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>