force-app/main/default/objects/Post_Survey__c/fields/X6_How_would_you_prefer_to_drink_Shakes__c.field-meta.xml
<CustomField>
    <fullName>X6_How_would_you_prefer_to_drink_Shakes__c</fullName>
    <label>6. How would you prefer to drink Shakes?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individually – Chilled in the beverage cooler</fullName>
            </value>
            <value>
                <fullName>Individually – At room temperature</fullName>
            </value>
            <value>
                <fullName>In a pack of 4 – Chilled in the beverage cooler</fullName>
            </value>
            <value>
                <fullName>In a pack of 4 – At room temperature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>