force-app/main/default/objects/Post_Survey__c/fields/X7_How_frequently_would_you_buy_Shakes__c.field-meta.xml
<CustomField>
    <fullName>X7_How_frequently_would_you_buy_Shakes__c</fullName>
    <label>7. How frequently would you buy Shakes?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>3-6 times per week</fullName>
            </value>
            <value>
                <fullName>1-2 times per week</fullName>
            </value>
            <value>
                <fullName>1-3 times per month</fullName>
            </value>
            <value>
                <fullName>5-11 times per year</fullName>
            </value>
            <value>
                <fullName>A few times per year</fullName>
            </value>
            <value>
                <fullName>Infrequently</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>1-3 times per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>