force-app/main/default/objects/Post_Survey__c/fields/X9_What_would_you_have_eaten_instead__c.field-meta.xml
<CustomField>
    <fullName>X9_What_would_you_have_eaten_instead__c</fullName>
    <label>9.What would you have eaten instead?</label>
    <type>TextArea</type>
</CustomField>